Fix problem with axis and up; add no-notebook demo suite

--- a/vpython/vpython_libraries/glowcomm.html
+++ b/vpython/vpython_libraries/glowcomm.html
@@ -96,8 +96,8 @@ function send() { // periodically send events and update_canvas to websocket and
 	}
 }
 
-// ***************************************************************************** //
-// THE REST OF THIS FILE IS IDENTICAL TO THE CORRESPONDING PART OF glowcomm.js //
+// *************************************************************************************************** //
+// THE REST OF THIS FILE IS IDENTICAL IN glowcomm.html AND glowcomm.js (except for the last few lines) //
 
 // Should eventually have glowcomm.html and glowcom.js both import this common component.
 
@@ -310,8 +310,7 @@ var attrsb = {'a':'userzoom', 'b':'userspin', 'c':'range', 'd':'autoscale', 'e':
               'p':'left', 'q':'right', 'r':'top', 's':'bottom', 't':'_cloneid'}
 
 // methods are X in {'m': '23X....'}
-var methods = {'a':'select', 'b':'pos', 'c':'start', 'd':'stop', 'f':'clear', // unused ghijklmnopuvxyzCDFAB
-			   'e':'rotate',
+var methods = {'a':'select', 'b':'pos', 'c':'start', 'd':'stop', 'f':'clear', // unused eghijklmnopuvxyzCDFAB
 			   'q':'plot', 's':'add_to_trail',
                't':'follow', 'w':'clear_trail',
                'G':'bind', 'H':'unbind', 'I':'waitfor', 'J':'pause', 'K':'pick', 'L':'GSprint',
@@ -424,8 +423,8 @@ function handler(data) {
     */
 	
 	if (data.cmds !== undefined && data.cmds.length > 0) handle_cmds(data.cmds)
-	if (data.attrs !== undefined && data.attrs.length > 0) handle_attrs(data.attrs)
 	if (data.methods !== undefined && data.methods.length > 0) handle_methods(data.methods)
+	if (data.attrs !== undefined && data.attrs.length > 0) handle_attrs(data.attrs)
 } // end of handler
 
 function handle_cmds(dcmds) {
@@ -710,42 +709,6 @@ function handle_cmds(dcmds) {
 	} // end of cmds (constructors and special data)
 }
 
-function handle_attrs(dattrs) {
-    "use strict";
-	//console.log('ATTRS')
-	for (var idattrs in dattrs) { // attributes; cmd is {'idx':idx, 'attr':attr, 'val':val}
-		var cmd = dattrs[idattrs]
-		var idx = cmd.idx
-		var obj = glowObjs[idx]
-		var attr = cmd['attr']
-		var val = cmd['val']
-		var triangle_quad = ['v0', 'v1', 'v2', 'v3']
-		// vector attrs in attach_arrow have arbitrary names, so check for length 3 array instead
-		if (val instanceof vec) {
-			if (attr === 'pos' && (obj instanceof points || obj instanceof curve)) {
-				var ptlist = []
-				for (var kk = 0; kk < val.length; kk++) {
-					ptlist.push( val[kk] )
-				}
-				obj[attr] = ptlist
-			} else if (attr === 'axis' && (obj instanceof arrow)) {
-				obj['axis_and_length'] = val
-			} else {
-				obj[attr] = val
-			}
-		} else if (attr == 'lights') {
-			if (val == 'empty_list') val = []
-			obj[attr] = val
-		} else {
-			if (triangle_quad.indexOf(attr) !== -1) {
-				obj[attr] = glowObjs[val]
-			} else {
-				obj[attr] = val
-			}
-		}
-	} // end of attributes
-}
-
 function handle_methods(dmeth) {
     "use strict";
 	//console.log('METHODS')
@@ -807,6 +770,51 @@ function handle_methods(dmeth) {
 			send_pick(val, p, seg)
 		} else obj[method](val)
 	}
+}
+
+function handle_attrs(dattrs) {
+    "use strict";
+	//console.log('ATTRS')
+	for (var idattrs in dattrs) { // attributes; cmd is {'idx':idx, 'attr':attr, 'val':val}
+		var cmd = dattrs[idattrs]
+		var idx = cmd.idx
+		var obj = glowObjs[idx]
+		var attr = cmd['attr']
+		var val = cmd['val']
+		var triangle_quad = ['v0', 'v1', 'v2', 'v3']
+		// vector attrs in attach_arrow have arbitrary names, so check for length 3 array instead
+		if (val instanceof vec) {
+			if (attr === 'pos' && (obj instanceof points || obj instanceof curve)) {
+				var ptlist = []
+				for (var kk = 0; kk < val.length; kk++) {
+					ptlist.push( val[kk] )
+				}
+				obj[attr] = ptlist
+			} else if (attr === 'axis') {
+				// For axis and up, Python maintains them to be perpendicular, so avoid
+				//   having GlowScript do it again, which can have bad results.
+				window.__adjustupaxis = false
+				if (obj instanceof arrow) attr = 'axis_and_length'
+				obj[attr] = val
+				window.__adjustupaxis = true
+			} else if (attr === 'up') {
+				window.__adjustupaxis = false
+				obj[attr] = val
+				window.__adjustupaxis = true
+			} else {
+				obj[attr] = val
+			}
+		} else if (attr == 'lights') {
+			if (val == 'empty_list') val = []
+			obj[attr] = val
+		} else {
+			if (triangle_quad.indexOf(attr) !== -1) {
+				obj[attr] = glowObjs[val]
+			} else {
+				obj[attr] = val
+			}
+		}
+	} // end of attributes
 }
 console.log("END OF GLOWCOMM")
 
