Ready for new release

--- a/vpython/vpython_libraries/glowcomm.html
+++ b/vpython/vpython_libraries/glowcomm.html
@@ -1,4 +1,5 @@
 <head>
+<meta charset="UTF-8">
 <link type="text/css" href="ide.css" rel="stylesheet" />
 <link type="text/css" href="jquery-ui.custom.css" rel="stylesheet" />
 <script type="text/javascript" src="jquery.min.js"></script>
