Plotly works in Jupyter notebook. Updated glow. Remaining bugs: pick a curve; RotatingPoints flashes, disappears.

--- a/vpython/vpython_libraries/glowcomm.html
+++ b/vpython/vpython_libraries/glowcomm.html
@@ -4,6 +4,7 @@
 <link type="text/css" href="jquery-ui.custom.css" rel="stylesheet" />
 <script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript" src="jquery-ui.custom.min.js"></script>
+<script type="text/javascript" src="plotly.js"></script>
 <script type="text/javascript" src="glow.min.js"></script>
 </head>
 <body>
