Fix bugs in points and mouse picking; all demos work in or outside of Jupyter notebook

--- a/vpython/vpython_libraries/glowcomm.html
+++ b/vpython/vpython_libraries/glowcomm.html
@@ -346,7 +346,8 @@ var attrsb = {'a':'userzoom', 'b':'userspin', 'c':'range', 'd':'autoscale', 'e':
               'k':'vertical', 'l':'min', 'm':'max', 'n':'step', 'o':'value',
               'p':'left', 'q':'right', 'r':'top', 's':'bottom', 't':'_cloneid',
               'u':'logx', 'v':'logy', 'w':'dot', 'x':'dot_radius', 
-              'y':'markers', 'z':'legend', 'A':'label','B':'delta', 'C':'marker_color'}
+              'y':'markers', 'z':'legend', 'A':'label','B':'delta', 'C':'marker_color',
+              'D':'size_units'}
 
 // methods are X in {'m': '23X....'}
 var methods = {'a':'select', 'b':'pos', 'c':'start', 'd':'stop', 'f':'clear', // unused eghijklmnopvxyzCDFAB
