--- a/vpython/vpython_libraries/glowcomm.html
+++ b/vpython/vpython_libraries/glowcomm.html
@@ -28,7 +28,7 @@ function fontloading() { // trigger loading of fonts for 3D text
 	// override the fontloading url's in the GlowScript library
 	if (window.__font_sans === undefined) {
 		var fsans
-		fsans =  'Roboto-Medium.ttf' // a sans serif font
+		fsans =  'Roboto-Medium.ttf' // a sans serif font; no_notebook server prepends vpython_data/
 		opentype_load(fsans, function(err, fontrefsans) {
 			if (err) throw new Error('Font ' + fsans + ' could not be loaded: ' + err)
 			window.__font_sans = fontrefsans // an opentype.js Font object
@@ -36,7 +36,7 @@ function fontloading() { // trigger loading of fonts for 3D text
 	}
 	if (window.__font_serif === undefined) {
 		var fserif
-		fserif = 'NimbusRomNo9L-Med.otf' // a serif font
+		fserif = 'NimbusRomNo9L-Med.otf' // a serif font; no_notebook server prepends vpython_data/
 		opentype_load(fserif, function(err, fontrefserif) {
 			if (err) throw new Error('Font ' + fserif + ' could not be loaded: ' + err)
 			window.__font_serif = fontrefserif // an opentype.js Font object
