--- a/vpython/vpython_libraries/glowcomm.html
+++ b/vpython/vpython_libraries/glowcomm.html
@@ -75,7 +75,7 @@ window.onload = function() {
 		}
 		var t2 = msclock()
 		var dt = Math.floor(t1+interval-t2) // attempt to keep the time between renders constant
-		if (dt < 15) dt = 0     // becaause setTimeout is inaccurate for small dt's
+		if (dt < 15) dt = 0     // because setTimeout is inaccurate for small dt's
 		timer = setTimeout(send, dt)
 	}
 
@@ -256,11 +256,13 @@ function send_pick(cvs, p, seg) {
 	events.push(evt)
 }
 
-function send_compound(cvs, pos, size, up) {
+function send_compound(cvs, pos, size, up) { // compound, extrusion, 3D text
     "use strict";
     var evt = {event: '_compound', 'canvas': cvs, 'pos': [pos.x, pos.y, pos.z], 
         'size': [size.x, size.y, size.z], 'up': [up.x, up.y, up.z]}
 	events.push(evt)
+	clearTimeout(timer) // Don't wait for next transmission to Python
+	send()
 }
 
 var waitfor_canvas = null
