Implement fixes from GlowScript

--- a/vpython/vpython_libraries/glowcomm.html
+++ b/vpython/vpython_libraries/glowcomm.html
@@ -459,7 +459,13 @@ function decode(data) {
                 }
 			} else if (textattrs.indexOf(attr) > -1) {
                 if (attr == 'choices') { // menu choices to be wrapped in a list
-                    val = m[3].split(' ')
+                    val = m[3].slice(2,-2)
+                    val = val.replace(/'/g, '') // remove quotes
+                    val = val.replace(/,/g, '') // remove commas
+                    let s = val.split(' ')
+                    val = []
+                    let a
+                    for (a of s) {val.push(a)}
                 } else {
                     // '\n' doesn't survive JSON transmission, so in vpython.py we replace '\n' with '<br>'
                     val = m[3].replace(/<br>/g, "\n")
@@ -792,6 +798,7 @@ function handle_cmds(dcmds) {
 				cfg.objName = obj
 				cfg.bind = control_handler
 				cfg = fix_location(cfg)
+                console.log(cfg.choices)
 				glowObjs[idx] = menu(cfg)
 				if (cfg['selected'] === 'None') {
 					cfg['selected'] = null                              
