scene.capture handles label text

--- a/vpython/vpython_libraries/glowcomm.html
+++ b/vpython/vpython_libraries/glowcomm.html
@@ -540,6 +540,7 @@ function handler(data) {
 	}
 	*/
 	
+	
 	if (data.cmds !== undefined && data.cmds.length > 0) handle_cmds(data.cmds)
 	if (data.methods !== undefined && data.methods.length > 0) handle_methods(data.methods)
 	if (data.attrs !== undefined && data.attrs.length > 0) handle_attrs(data.attrs)
@@ -871,7 +872,9 @@ async function handle_methods(dmeth) {
             if (val === null) obj.camera.follow(null)
 			else obj.camera.follow(glowObjs[val])
 		} else if (method === "capture") {
-			await obj.capture(val)
+			// val has the form "Tname.png" (display labels) or "Fname.png" (do not display labels)
+			let TF =  (val[0] == 'T') ? true: false
+			await obj.capture(val.slice(1), TF)
 		} else if (method === 'waitfor') {
 			waitfor_canvas = idx
 			waitfor_options = val
